variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: ';' expected but '=' found.
nbpas:Int = 0;
          ^